CTT_Online_Shopping/K8s/Services/Public/public-search-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchapi-public
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: searchapi-public
  template:
    metadata:
      labels:
        app: searchapi-public
    spec:
      containers:
        - env:
            - name: ASPNETCORE_ENVIRONMENT
              value: Production
          image: us-central1-docker.pkg.dev/nagp-ctt/ecommerce-repo/searchapi-public:latest
          name: searchapi-public
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: searchapi-public-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: searchapi-public
  type: LoadBalancer
